# service-controller-notebookum-go

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  TESTING.md  docker-compose.yml  go.mod  openapi.yaml  pyproject.toml  spec.md
app/: __init__.py  config.py
cmd/controller/: main.go
config/: strangler.yaml
internal/config/: config.go
internal/consul/: register.go
internal/core/resilience/: registry.go
internal/domain/documents/: store.go
internal/redis/: client.go
internal/services/strangler/: config.go  config_test.go  router.go
internal/transport/upstream/: client.go  client_test.go
internal/web/: feature_test.go  server.go  web_test.go
internal/web/handlers/: documents.go  health.go  proxy.go  summaries.go  users.go
internal/web/middleware/: auth.go  correlation.go
internal/web/problem/: problem.go
internal/web/validators/: validators.go
