[project]
name = "service-controller-notebookum"
version = "0.1.0"
description = "Controller Microservice for NotebookUm"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1",
    "requests>=2.31",
    "granian>=1.0",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "black>=24.0",
    "flake8>=7.0",
    "pytest>=8.0",
    "pytest-flask>=1.3",
]
